<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/blue_bg_grad"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonMap"
        style="@style/NiceButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textDestination"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:text="@string/buttonMap"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/buttonTime"
        style="@style/NiceButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textTime"
        android:layout_alignParentRight="true"
        android:paddingRight="10dp"
        android:text="@string/buttonTime"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/buttonDate"
        style="@style/NiceButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textDate"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:text="@string/buttonDate"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/buttonWishList"
        style="@style/NiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/buttonSearch"
        android:layout_marginBottom="30dp"
        android:text="@string/buttonWishList"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/textSeatsRequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonSearch"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="Enter Number of people taking ride"
        android:inputType="number" />

    <EditText
        android:id="@+id/textDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textDate"
        android:layout_below="@+id/textSeatsRequired"
        android:ems="8"
        android:hint="@string/textMapHint"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textDestination"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:ems="8"
        android:hint="@string/textDateHint"
        android:inputType="date" />

    <EditText
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textDate"
        android:layout_below="@+id/textDate"
        android:layout_marginTop="30dp"
        android:ems="8"
        android:hint="@string/textTimeHint" />

    <Button
        android:id="@+id/buttonSearch"
        style="@style/NiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/buttonSearch"
        android:textSize="20sp" />

</RelativeLayout>