<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_bg_grad"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/NewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password" />

    <EditText
        android:id="@+id/newpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/Yourpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Confirm" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Reset"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/RESET" />

</LinearLayout>