<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/blue_bg_grad"
    android:orientation="vertical" >

    <Button
        android:id="@+id/launchStudent"
        style="@style/NiceButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/launchCarOwner"
        android:layout_alignParentTop="true"
        android:layout_marginTop="85dp"
        android:text="@string/launchStudent" />

    <Button
        android:id="@+id/viewBookedRides"
        style="@style/NiceButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/launchCarOwner"
        android:layout_below="@+id/launchCarOwner"
        android:layout_marginTop="56dp"
        android:text="@string/viewBookedRides" />

    <Button
        android:id="@+id/launchCarOwner"
        style="@style/NiceButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/launchStudent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/launchCarOwner" />

</RelativeLayout>