<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/blue_bg_grad"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/riderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/riderName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/riderNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/riderName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:autoLink="phone"
        android:text="@string/riderNumber"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/riderFromTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/riderNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/riderFromTime"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/riderToTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/riderFromTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/riderToTime"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/notifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/riderNumber"
        android:layout_below="@+id/riderToTime"
        android:layout_marginTop="52dp"
        android:text="Book a ride" />

</RelativeLayout>